[tool.poetry]
name = "ena-tools"
version = "0.1.0"
description = ""
authors = ["matteobolner <matteo.bolner2@unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.1"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
